# obs-multicam-review

./: .clawignore  .gitattributes  .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml
control-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
control-ui/src/: App.tsx  index.css
control-ui/src/components/: ConfirmDialog.tsx  Modal.tsx
control-ui/src/hooks/: useApi.ts
control-ui/src/pages/: AudioConsolePage.tsx  DimensionsPage.tsx  OverlayPage.tsx  PresetsPage.tsx  ProductsPage.tsx  ProjectsPage.tsx  RecordingPage.tsx  ScenesPage.tsx  ScoringPage.tsx  SettingsPage.tsx  SourcesPage.tsx
control-ui/src/services/: api-client.ts  websocket-manager.ts
control-ui/src/types/: api.ts
docs/: API_SPEC.md  CODING_STANDARDS.md  DB_SCHEMA.md  DEBUG_GUIDE.md
overlay/: leaderboard.html  product-card.html  product-info.html  timecode.html
plugin/: CMakeLists.txt
plugin/src/: main.cpp  plugin.h
plugin/src/audio/: audio_manager.cpp  audio_manager.h
plugin/src/database/: database.cpp  database.h
plugin/src/filters/: source_record_filter.cpp  source_record_filter.h
plugin/src/preset/: preset_manager.cpp  preset_manager.h
plugin/src/recorder/: recorder.cpp  recorder.h
plugin/src/scene/: scene_manager.cpp  scene_manager.h
plugin/src/source/: source_manager.cpp  source_manager.h
plugin/src/timecode/: timecode_gen.cpp  timecode_gen.h
plugin/src/webserver/: webserver.cpp  webserver.h
scripts/: build.ps1  ci-setup.ps1  git-init.ps1  install.ps1  push-github.ps1  setup.ps1
